# vst-keylo

./: .gitignore  .gitmodules  CMakeLists.txt  README-Windows.txt  README-macOS.txt  README.txt  install.sh  run.sh
.claude/: settings.json
.github/workflows/: release.yml
Assets/: skey.onnx
Assets/test-loops/prediction/: predictions.csv
Source/: Analyser.cpp  Analyser.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BPMDetector.cpp  BPMDetector.h  KeyDetector.cpp  KeyDetector.h  PitchDetector.cpp  PitchDetector.h  SkeyInference.cpp  SkeyInference.h
cmake/: aubio_config.h
installer/windows/: keylo.nsi
ml/: README.md  requirements.txt
ml/training/: 01_download.py  02_prelabel.py  03_finetune.py  04_export_onnx.py  04_finetune_skey.py  05_export_onnx.py  05_validate.py  audio_utils.py  chromanet.py
tests/: test_key.cpp
